--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,5 @@ cmake_minimum_required(VERSION 2.8)
 project( denseFlow )
 find_package( OpenCV REQUIRED )
 include_directories( ${OpenCV_INCLUDE_DIRS} )
-add_executable( denseFlow_gpu denseFlow_gpu.cpp )
-target_link_libraries( denseFlow_gpu ${OpenCV_LIBS} )
+add_executable( denseImage denseImage.cpp )
+target_link_libraries( denseImage ${OpenCV_LIBS} )
